[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://src/game/GameController.gd" id="1"]
[ext_resource type="Script" path="res://src/game/RotInput.gd" id="2"]
[ext_resource type="Script" path="res://src/game/PitchSfx.gd" id="3"]

[node name="Game" type="Node3D"]
script = ExtResource("1")

[node name="World" type="Node3D" parent="."]

[node name="Tunnel" type="MeshInstance3D" parent="World"]

[node name="PaddleRoot" type="Node3D" parent="World"]

[node name="Ball" type="MeshInstance3D" parent="World"]

[node name="BrickRoot" type="Node3D" parent="World"]

[node name="CameraRig" type="Node3D" parent="World"]

[node name="Camera3D" type="Camera3D" parent="World/CameraRig"]
current = true
near = 0.05
far = 400.0
fov = 82.0

[node name="KeyLight" type="DirectionalLight3D" parent="World"]
position = Vector3(-3, 7, -6)
rotation_degrees = Vector3(-40, -18, 0)
light_energy = 1.35
shadow_enabled = true

[node name="FillLight" type="OmniLight3D" parent="World"]
position = Vector3(0, 0, 6)
light_energy = 0.65
omni_range = 40.0

[node name="RotInput" type="Node" parent="."]
script = ExtResource("2")

[node name="ComboSfx" type="AudioStreamPlayer" parent="."]
script = ExtResource("3")
volume_db = -8.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="HUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 122.0

[node name="VBox" type="VBoxContainer" parent="HUD/Panel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScoreLabel" type="Label" parent="HUD/Panel/VBox"]
layout_mode = 2
text = "Score: 0"

[node name="LevelLabel" type="Label" parent="HUD/Panel/VBox"]
layout_mode = 2
text = "Level: 1/3"

[node name="ComboLabel" type="Label" parent="HUD/Panel/VBox"]
layout_mode = 2
text = "Combo: 0"

[node name="MessageLabel" type="Label" parent="HUD"]
offset_left = 0.0
offset_top = 34.0
offset_right = 1152.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 38
text = "Level 1"
horizontal_alignment = 1
visible = false
